fix: don't use deprecated way to convert string to Integer/Double